CAP-2439 - styling progress

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div id="customizePane">
-    <div>
+    <div id="generalOptions">
         <span>Grade Level<br>
             <select id="grade_level" title="Grade Level">
             </select>
