CAP-2439 - break out saved options into separate file

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="config.js"></script>
+<script src="savedOptions.js"></script>
 <script src="adminui.js"></script>
 <link rel="stylesheet" type="text/css" href="adminui.css" media="screen" />
 <head>
