CAP-2439 - added actual Player preview (ajax won't work from localhost though)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="config.js"></script>
 <script src="savedOptions.js"></script>
+<script src="playerManager.js"></script>
 <script src="adminui.js"></script>
 <link rel="stylesheet" type="text/css" href="adminui.css" media="screen" />
 <head>
@@ -28,7 +29,9 @@
     </div>
     <div id="elementPane"></div>
 </div>
+<button id="changeExampleSize" onclick="adminUI.toggleExampleSize()">Change Example Size</button>
 <div id="examplePane">
+    <iframe class="largeExample" src="https://cdevtc15-learnx-svc.k12.com/learnx-svc/getIndex/conceptId/316260/conceptType/LESSON?lessonDocumentId=5a398a2d2f53b91da80b0970&impersonating=false&schoolId=1&lms=PREVIEW&lmsInstance=THEMEADMIN&role=student"></iframe>
 </div>
 </body>
 </html>
