--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </div>
 <button id="changeExampleSize" onclick="adminUI.toggleExampleSize()">Change Example Size</button>
 <div id="examplePane">
-    <!--<iframe class="largeExample" src="https://cdevtc15-learnx-svc.k12.com/learnx-svc/getIndex/conceptId/316260/conceptType/LESSON?lessonDocumentId=5a398a2d2f53b91da80b0970&impersonating=false&schoolId=1&lms=PREVIEW&lmsInstance=THEMEADMIN&role=student"></iframe>-->
+    <iframe class="largeExample" src="https://cdevtc15-learnx-svc.k12.com/learnx-svc/getIndex/conceptId/316260/conceptType/LESSON?lessonDocumentId=5a398a2d2f53b91da80b0970&impersonating=false&schoolId=1&lms=PREVIEW&lmsInstance=THEMEADMIN&role=student&identityId=123456789"></iframe>
 </div>
 </body>
 </html>
